Create list pricing, fix spec errors etc
